--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
     "express-jwt": "^3.3.0",
+    "fs.extra": "^1.3.2",
     "jsonwebtoken": "^5.7.0",
     "lowdb": "^0.12.3",
     "morgan": "^1.6.1"
