--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "angular-filemanager-nodejs-bridge": "^0.1.2",
+    "bcrypt": "^0.8.5",
     "bcrypt-as-promised": "^1.1.0",
     "bluebird": "^3.3.1",
     "body-parser": "^1.15.0",
