--- a/bower.json
+++ b/bower.json
@@ -40,6 +40,7 @@
     "pako": "^0.2.8",
     "angular-resource": "^1.5.0",
     "angular-bootstrap": "^1.1.2",
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0"
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0",
+    "angular-utf8-base64": "^0.0.5"
   }
 }
