--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "fs.extra": "^1.3.2",
     "jsonwebtoken": "^5.7.0",
     "lowdb": "^0.12.3",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "mustbe": "^0.4.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
